# dwd-weather-skill

./: .gitignore  Makefile  README.md
dwd-weather/: SKILL.md  install-skill.sh  pyproject.toml
dwd-weather/references/: setup.md
dwd-weather/scripts/: cmd_alerts.py  cmd_current.py  cmd_forecast.py  cmd_history.py  cmd_stations.py  cmd_summary.py  main.py  utils.py
dwd-weather/tests/: conftest.py  test_cli.py  test_utils.py
images/: architecture.excalidraw
