[project]
name = "dwd-weather"
version = "1.0.0"
description = "DWD weather queries via the BrightSky API (api.brightsky.dev)"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "requests>=2.31,<3",
    "rich>=13.0,<15",
    "click>=8.1,<9",
]

[project.scripts]
weather = "scripts.main:cli"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
target-version = "py311"
